feat: トレーニング履歴用エンドポイントを実装
